# some_magic

./: .gitignore  README.md  pyproject.toml
source/: elem_counting.py  json_comparison.py  validate_data.py
