[tool.poetry]
name = "some-magic"
version = "0.1.0"
description = ""
authors = ["Satan1437 <exemplles.white@gmail.com>"]
readme = "README.md"
packages = [{include = "some_magic"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
